<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ooo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/iptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="Port :"
        android:textColor="#B3660A"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/ip" />

    <EditText

        android:id="@+id/port"
        android:layout_width="148dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/Iptext" />

    <EditText

        android:id="@+id/ip"
        android:layout_width="148dp"
        android:layout_height="33dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/Iptext" />

    <TextView
        android:id="@+id/Iptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="Ip :"
        android:textColor="#B3660A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/but"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="20dp"
        android:text="@string/main_login"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="388dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/main_welcome"
        android:textColor="#B3660A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/main_password_text"
        android:textColor="#B3660A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="114dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/main_bateau"
        android:textColor="#B3660A"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText

        android:id="@+id/password"
        android:layout_width="144dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:fontFamily="monospace"
        android:text="@string/main_login_text"
        android:textColor="#B3660A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/retMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="12dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but" />

</androidx.constraintlayout.widget.ConstraintLayout>